<resources>
    <string name="app_name">HelpPing</string>


    <!--    for main activity navigation-->
    <string name="home">Home</string>
    <string name="feature">Feature</string>
    <string name="profile">Your info</string>

    <string name="default_web_client_id">572672373427-ksbevkgcm19sfk1h0nqf05bnco13r5n7.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="emergency_share_title">Share status &amp; real-time location?</string>
    <string name="emergency_share_subtitle">Status updates and location will be shared with emergency contacts for 24 hours or until you stop sharing.</string>
    <string name="emergency_share_change_settings">Change settings</string>
    <string name="emergency_share_reason_hint">Reason for sharing (optional)</string>
    <string name="emergency_share_with">Share with</string>
    <string name="emergency_share_action">Share</string>
    <string name="emergency_share_icon_desc">Share location</string>
    <string name="emergency_share_contact_avatar_desc">Emergency contact avatar</string>

    <string name="emergency_share_settings_title">Emergency sharing</string>
    <string name="emergency_share_contact_name">Emergency contact name</string>
    <string name="emergency_share_contact_phone">Emergency contact phone</string>
    <string name="save">Save</string>

    <!-- Walkie-talkie internet relay (set these to enable long-distance PTT) -->
    <string name="ptt_relay_host"></string>
    <string name="ptt_relay_port">0</string>
</resources>
